# AgentProfiler

./: .gitignore  README.md  pyproject.toml
agentprofiler/: __init__.py  parser.py  profiler.py  upset_plot.py
agentprofiler_react/: package-lock.json  package.json
agentprofiler_react/app/: page.tsx  tool_call_graph.js  upset_plot.js
agentprofiler_react/public/: tracings.jsonl
tests/: __init__.py  test_parser.py  test_profiler.py  test_upset_plot.py
